--- a/package.json
+++ b/package.json
@@ -3,23 +3,35 @@
   "version": "1.0.0",
   "main": "expo/AppEntry.js",
   "scripts": {
+    "start:backend": "nodemon serveur.js",
     "start": "expo start",
+    "start:both": "concurrently \"npm run start\" \"npm run start:backend\"",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~3.2.3",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
-    "expo": "~51.0.28",
+    "axios": "^1.7.7",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "expo": "^51.0.38",
     "expo-status-bar": "~1.12.1",
+    "express": "^4.21.1",
+    "firebase-admin": "^12.6.0",
+    "nodemon": "^3.1.7",
     "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-native": "0.74.5",
     "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1"
+    "react-native-screens": "3.31.1",
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "concurrently": "^9.0.1"
   },
   "private": true
 }
