--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-native-screens": "3.31.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "metro-config": "^0.81.0"
   },
   "private": true
 }
