--- a/package.json
+++ b/package.json
@@ -11,12 +11,9 @@
     "web": "expo start --web"
   },
   "dependencies": {
-
+    "@expo/metro-runtime": "~3.2.3",
     "@react-native-firebase/app": "^21.0.0",
     "@react-native-firebase/messaging": "^21.0.0",
-
-    "@expo/metro-runtime": "~3.2.3",
-
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "axios": "^1.7.7",
@@ -33,14 +30,13 @@
     "react-native-linear-gradient": "^2.8.3",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10"
+    "react-native-web": "~0.19.10",
+    "socket.io": "^4.8.0",
+    "socket.io-client": "^4.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-
     "metro-config": "^0.81.0"
-
-
   },
   "private": true
 }
