--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "start:backend": "nodemon serveur.js",
     "start": "expo start",
     "start:both": "concurrently \"npm run start\" \"npm run start:backend\"",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
