--- a/package.json
+++ b/package.json
@@ -1,42 +1,42 @@
 {
-  "name": "smiley-app",
+  "name": "smiley",
   "version": "1.0.0",
   "main": "expo/AppEntry.js",
   "scripts": {
-    "start:backend": "nodemon serveur.js",
     "start": "expo start",
-    "start:both": "concurrently \"npm run start\" \"npm run start:backend\"",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "backend": "nodemon serveur.js",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.2.3",
-    "@react-native-firebase/app": "^21.0.0",
-    "@react-native-firebase/messaging": "^21.0.0",
+    "@expo/vector-icons": "^14.0.4",
+    "@react-native-firebase/app": "^21.3.0",
+    "@react-native-firebase/auth": "^21.3.0",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "axios": "^1.7.7",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "expo": "^51.0.38",
+    "expo": "~51.0.28",
     "expo-status-bar": "~1.12.1",
+    "expo-system-ui": "^3.0.7",
     "express": "^4.21.1",
-    "firebase-admin": "^12.6.0",
+    "firebase-admin": "^12.7.0",
+    "install": "^0.13.0",
     "nodemon": "^3.1.7",
+    "npm": "^10.9.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-native": "0.74.5",
-    "react-native-linear-gradient": "^2.8.3",
+    "react-native-dotenv": "^3.4.11",
     "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10",
-    "socket.io": "^4.8.0",
-    "socket.io-client": "^4.8.0"
+    "react-native-screens": "^3.35.0",
+    "react-native-web": "^0.19.13",
+    "uuid": "^11.0.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "metro-config": "^0.81.0"
+    "@babel/core": "^7.20.0"
   },
   "private": true
 }
