--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@react-native-firebase/app": "^21.3.0",
     "@react-native-firebase/auth": "^21.3.0",
     "@react-native-firebase/firestore": "^21.3.0",
+    "@react-native-firebase/messaging": "^21.3.0",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "axios": "^1.7.7",
     "cors": "^2.8.5",
-    "expo": "~51.0.28",
+    "expo": "^51.0.38",
+    "expo-dev-client": "~4.0.28",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "^3.0.7",
     "express": "^4.21.1",
@@ -34,7 +36,8 @@
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "^3.35.0",
     "react-native-web": "^0.19.13",
-    "uuid": "^11.0.2"
+    "uuid": "^11.0.2",
+    "expo-build-properties": "~0.12.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
