--- a/package.json
+++ b/package.json
@@ -1,42 +1,23 @@
 {
-  "name": "smiley-app",
+  "name": "smiley-backend",
   "version": "1.0.0",
-  "main": "expo/AppEntry.js",
+  "description": "",
+  "main": "serveur.js",
   "scripts": {
-    "start:backend": "nodemon serveur.js",
-    "start": "expo start",
-    "start:both": "concurrently \"npm run start\" \"npm run start:backend\"",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "@expo/metro-runtime": "~3.2.3",
-    "@react-native-firebase/app": "^21.0.0",
-    "@react-native-firebase/messaging": "^21.0.0",
-    "@react-navigation/bottom-tabs": "^6.6.1",
-    "@react-navigation/native": "^6.1.18",
+    "@react-native-firebase/app": "^21.4.0",
+    "@react-native-firebase/database": "^21.4.0",
     "axios": "^1.7.7",
+    "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "expo": "^51.0.38",
-    "expo-status-bar": "~1.12.1",
     "express": "^4.21.1",
-    "firebase-admin": "^12.6.0",
-    "nodemon": "^3.1.7",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.74.5",
-    "react-native-linear-gradient": "^2.8.3",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10",
-    "socket.io": "^4.8.0",
-    "socket.io-client": "^4.8.0"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "metro-config": "^0.81.0"
-  },
-  "private": true
+    "firebase-admin": "^12.7.0",
+    "ws": "^8.18.0"
+  }
 }
