--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "serveur.js",
   "scripts": {
+    "start": "node ./serveur.js",
+    "dev": "nodemon ./serveur.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -18,6 +20,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "firebase-admin": "^12.7.0",
+    "nodemon": "^3.1.7",
     "ws": "^8.18.0"
   }
 }
