--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@expo/metro-runtime": "~3.2.3",
     "@expo/vector-icons": "^14.0.4",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-firebase/app": "^21.3.0",
     "@react-native-firebase/auth": "^21.3.0",
     "@react-native-firebase/firestore": "^21.3.0",
@@ -23,10 +24,12 @@
     "cors": "^2.8.5",
     "expo": "^51.0.38",
     "expo-build-properties": "~0.12.5",
+    "expo-constants": "~16.0.2",
     "expo-dev-client": "~4.0.29",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "^3.0.7",
     "express": "^4.21.1",
+    "firebase": "^11.0.1",
     "firebase-admin": "^12.7.0",
     "install": "^0.13.0",
     "nodemon": "^3.1.7",
