--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
   "dependencies": {
     "@expo/metro-runtime": "~3.2.3",
     "@expo/vector-icons": "^14.0.4",
-    "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-native-firebase/app": "^21.3.0",
-    "@react-native-firebase/auth": "^21.3.0",
-    "@react-native-firebase/firestore": "^21.3.0",
-    "@react-native-firebase/messaging": "^21.3.0",
+    "@firebase/app": "^0.10.15",
+    "@firebase/auth": "^1.8.0",
+    "@firebase/firestore": "^4.7.4",
+    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-firebase/app": "^21.4.0",
+    "@react-native-firebase/auth": "^21.4.0",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
