[--] Working on app access

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
+    "activity-indicator": "^0.0.3",
     "axios": "^1.7.7",
     "cors": "^2.8.5",
     "expo": "^51.0.38",
@@ -28,7 +29,6 @@
     "expo-system-ui": "^3.0.7",
     "express": "^4.21.1",
     "firebase": "^11.0.1",
-    "firebase-admin": "^12.7.0",
     "install": "^0.13.0",
     "nodemon": "^3.1.7",
     "npm": "^10.9.0",
