--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
     "@firebase/auth": "^1.8.0",
     "@firebase/firestore": "^4.7.4",
     "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-firebase/app": "^21.4.0",
+    "@react-native-firebase/auth": "^21.4.0",
+    "@react-native-firebase/firestore": "^21.4.0",
+    "@react-native-picker/picker": "2.7.5",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
@@ -25,6 +29,7 @@
     "expo-build-properties": "~0.12.5",
     "expo-constants": "~16.0.2",
     "expo-dev-client": "~4.0.29",
+    "expo-router": "^3.5.23",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "^3.0.7",
     "express": "^4.21.1",
@@ -36,7 +41,8 @@
     "react-dom": "^18.2.0",
     "react-native": "0.74.5",
     "react-native-dotenv": "^3.4.11",
-    "react-native-safe-area-context": "4.10.5",
+    "react-native-gesture-handler": "~2.16.1",
+    "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "^3.35.0",
     "react-native-web": "^0.19.13",
     "uuid": "^11.0.2"
