--- a/app.json
+++ b/app.json
@@ -15,7 +15,7 @@
       "supportsTablet": true
     },
     "android": {
-      "googleServicesFile": "./android/app/google-services.json",
+      "googleServicesFile": "./google-services.json",
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
@@ -27,11 +27,16 @@
       "output": "static",
       "favicon": "./assets/images/favicon.png"
     },
+    "plugins": [
+      "expo-router"
+    ],
     "extra": {
+      "router": {
+        "origin": false
+      },
       "eas": {
-        "projectId": "31e4fe4f-fd9a-43e5-b9b2-0b87b9cb9cda"
+        "projectId": "363fbd29-d277-4f73-ba0c-c5068f6b174f"
       }
-    },
-    "plugins": ["expo-router"]
+    }
   }
 }
