--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "activity-indicator": "^0.0.3",
     "axios": "^1.7.7",
     "cors": "^2.8.5",
-    "expo": "^51.0.38",
+    "expo": "^51.0.39",
     "expo-build-properties": "~0.12.5",
     "expo-constants": "~16.0.2",
     "expo-dev-client": "~4.0.29",
@@ -44,6 +44,7 @@
     "react-native-gesture-handler": "~2.16.1",
     "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "^3.35.0",
+    "react-native-speedometer": "^1.0.5",
     "react-native-web": "^0.19.13",
     "uuid": "^11.0.2"
   },
