--- a/.gitignore
+++ b/.gitignore
@@ -37,10 +37,9 @@ yarn-error.*
 # ignores all .env files
 .env*
 
-# ignores all google services files
-.google-services.json
-
 # Advice: Add '/android' and '/ios' to your .gitignore file if you intend to use CNG / Prebuild. Learn more: https://docs.expo.dev/workflow/prebuild/#usage-with-eas-build
 /android
 /ios
 
+# ignores all google services files
+google-services.json
