--- a/app.json
+++ b/app.json
@@ -2,6 +2,7 @@
   "expo": {
     "name": "smiley",
     "slug": "smiley",
+    "owner": "simleyface",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -15,7 +16,7 @@
       "supportsTablet": true
     },
     "android": {
-      "googleServicesFile": "./android/app/google-services.json",
+      "googleServicesFile": "./google-services.json",
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
@@ -32,6 +33,6 @@
         "projectId": "31e4fe4f-fd9a-43e5-b9b2-0b87b9cb9cda"
       }
     },
-    "plugins": ["expo-router"]
+    "plugins": ["expo-router", ["expo-build-properties"]]
   }
 }
