--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@firebase/app": "^0.10.15",
     "@firebase/auth": "^1.8.0",
     "@firebase/firestore": "^4.7.4",
-    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-firebase/app": "^21.4.0",
     "@react-native-firebase/auth": "^21.4.0",
     "@react-native-firebase/firestore": "^21.4.0",
@@ -25,11 +25,11 @@
     "activity-indicator": "^0.0.3",
     "axios": "^1.7.7",
     "cors": "^2.8.5",
-    "expo": "^51.0.38",
+    "expo": "~51.0.39",
     "expo-build-properties": "~0.12.5",
     "expo-constants": "~16.0.2",
     "expo-dev-client": "~4.0.29",
-    "expo-router": "^3.5.23",
+    "expo-router": "~3.5.24",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "^3.0.7",
     "express": "^4.21.1",
@@ -43,7 +43,7 @@
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-safe-area-context": "^4.10.5",
-    "react-native-screens": "^3.35.0",
+    "react-native-screens": "3.31.1",
     "react-native-web": "^0.19.13",
     "uuid": "^11.0.2"
   },
